# LEDVisualiser

./: CMakeLists.txt  CMakeLists.txt.user.7087875  CMakeSettings.json  LEDVisualiser_en_GB.ts  README.md  ledvisualiser.cpp  ledvisualiser.h  ledvisualiser.ui  ledvisualiser.ui.autosave  main.cpp
src/: colorselector.cpp  colorselector.h  colorselector.ui  http_request.cpp  http_request.h  ledvisualiser.cpp  ledvisualiser.h  ledvisualiser.ui  main.cpp
